hphp/test/zend/good/ext/exif/tests/exif022.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image022.tiff'));
?>