hphp/test/zend/bad/ext/standard/tests/file/directory_wrapper_fstat_basic.php
<?php
$d = dirname(__FILE__);
$h = opendir($d);
var_dump(fstat($h));
closedir($h);
?>
===DONE===